--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -131,6 +131,12 @@
   color: var(--primary-purple);
 }
 
+/* Center the 5th link (Contact) */
+.footer-links-grid a:nth-child(5) {
+  grid-column: 1 / -1;
+  justify-self: center;
+}
+
 /* Centered Footer Sections */
 .footer-section-centered {
   text-align: center;
