--- a/src/pages/SparesPage.css
+++ b/src/pages/SparesPage.css
@@ -70,6 +70,18 @@
   margin-bottom: 4rem;
 }
 
+.hero-background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  overflow: hidden;
+}
+
+
+
 .why-choose-section h2 {
   font-size: 2rem;
   font-weight: 600;
